--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
   "name": "gtaonline-vehicles",
   "version": "1.0.0",
-  "description": "",
+  "description": "A record of vehicles available in gta online. Which ones do you own?",
+  "watch": {
+    "build:js": {
+      "patterns": ["src/js","src/vue"],
+      "extensions": ["js", "vue"]
+    },
+    "build:css": {
+      "patterns": ["src/scss"],
+      "extensions": "js"
+    }
+  },
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build:css": "sass src/scss/style.scss docs/css/style.css --load-path=node_modules --style=compressed --embed-sources",
+    "build:js": "webpack-cli --config ./webpack.config.cjs",
+    "server": "node ./node_modules/http-server/bin/http-server ./docs -c-1 -o /index.html out",
     "scrape": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "npm-watch",
+    "//": "npm run dev: run this for dev work. Will run a server, watch for file changes and compile when needed.",
+    "dev": "concurrently \"npm:server\" \"npm:watch\" "
   },
   "repository": {
     "type": "git",
@@ -19,6 +35,16 @@
   },
   "homepage": "https://github.com/designerjason/gtaonline-vehicles#readme",
   "devDependencies": {
-    "jsdom": "^21.1.0"
+    "concurrently": "^7.6.0",
+    "http-server": "^14.1.1",
+    "jsdom": "^21.1.0",
+    "npm-watch": "^0.11.0",
+    "sass": "^1.58.3",
+    "vue-loader": "^17.0.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "vue": "^3.2.47"
   }
 }
