--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "description": "A record of vehicles available in gta online. Which ones do you own?",
   "watch": {
     "build:js": {
-      "patterns": ["src/js","src/vue"],
-      "extensions": ["js", "vue"]
+      "patterns": [
+        "src/js",
+        "src/vue"
+      ],
+      "extensions": [
+        "js",
+        "vue"
+      ]
     },
     "build:css": {
-      "patterns": ["src/scss"],
+      "patterns": [
+        "src/scss"
+      ],
       "extensions": "js"
     }
   },
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build:css": "sass src/scss/style.scss docs/css/style.css --load-path=node_modules --style=compressed --embed-sources",
+    "build:css": "sass src/scss/bundle.scss docs/css/bundle.min.css --load-path=node_modules --style=compressed --embed-sources",
     "build:js": "webpack-cli --config ./webpack.config.cjs",
     "server": "node ./node_modules/http-server/bin/http-server ./docs -c-1 -o /index.html out",
     "scrape": "node index.js",
@@ -34,14 +42,18 @@
     "url": "https://github.com/designerjason/gtaonline-vehicles/issues"
   },
   "homepage": "https://github.com/designerjason/gtaonline-vehicles#readme",
+  "browserslist": "> 0.25%, not dead",
   "devDependencies": {
+    "@babel/core": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^9.1.2",
     "concurrently": "^7.6.0",
     "http-server": "^14.1.1",
     "jsdom": "^21.1.0",
     "npm-watch": "^0.11.0",
-    "sass": "^1.58.3",
+    "sass": "^1.62.1",
     "vue-loader": "^17.0.1",
-    "webpack": "^5.75.0",
+    "webpack": "^5.81.0",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
