--- a/docs/ssr-manifest.json
+++ b/docs/ssr-manifest.json
@@ -31,6 +31,8 @@
   ],
   "src/App.vue": [
   ],
+  "src/components/VehicleItem.vue": [
+  ],
   "src/components/VehicleSelect.vue": [
   ],
   "src/main.js": [
