build update, added post scrape hook

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "scrape": "node index.js",
+    "postscrape": "vite-ssg build",
     "dev": "vite --open",
     "build": "vite-ssg build",
     "preview": "vite preview --open",
